# i2c-sensor-reading

./: .gitignore  Cargo.toml  claude_learn.md  command.sh
src/: main.rs
